--- a/jamovi/0000.yaml
+++ b/jamovi/0000.yaml
@@ -1,7 +1,7 @@
 ---
 title: Multivariate Exploratory Data Analysis
 name: MEDA
-version: 0.9.0
+version: 1.0.0
 jms: '1.0'
 authors:
   - Thomas Leblay
@@ -9,15 +9,16 @@ authors:
   - Maxime Saland
   - Sébastien Lê
 maintainer: sebastien.le@agrocampus-ouest.fr
-date: '2021-04-16'
+date: '2021-06-03'
 type: R
 description: >-
-  This module allows you to perform multivariate exploratory analyses the french
+  This module allows you to perform multivariate exploratory analyses the French
   way. In other words, you will be able to add supplementary information for a
   better understanding of your results. Three main methods have been
-  implemented:  Principal Component Analysis, Correspondence Analysis and
-  Multiple Correspondence Analysis. Results are obtained thanks to the
-  FactoMineR package.
+  implemented: Principal Component Analysis, Correspondence Analysis and
+  Multiple Correspondence Analysis. You can also get an automatic description of a variable based on the other
+  variables of the dataset (categorical/quantitative).
+  Results are obtained thanks to the FactoMineR package.
 analyses:
   - title: Variable Described by Categorical / Quantitative Data
     name: catdes
