--- a/jamovi/mca.a.yaml
+++ b/jamovi/mca.a.yaml
@@ -88,7 +88,7 @@ options:
     default: false
 
   - name: indcos
-    title: Cosinus
+    title: Cosine
     type: Bool
     default: false
 
@@ -103,7 +103,7 @@ options:
     default: false
 
   - name: varcos
-    title: Cosinus
+    title: Cosine
     type: Bool
     default: false
 
