--- a/jamovi/0000.yaml
+++ b/jamovi/0000.yaml
@@ -19,6 +19,9 @@ description: >-
   Multiple Correspondence Analysis. You can also get an automatic description of a variable based on the other
   variables of the dataset (categorical/quantitative).
   Results are obtained thanks to the FactoMineR package.
+  These analyses are described in the <a
+  href="https://sebastien-le.github.io/medasite/index.html"
+  target="_blank"> MEDA website</a>.
 analyses:
   - title: Variable Described by Categorical / Quantitative Data
     name: catdes
