--- a/jamovi/ca.u.yaml
+++ b/jamovi/ca.u.yaml
@@ -166,3 +166,12 @@ children:
                     name: contribcol
                   - type: CheckBox
                     name: coscol
+          - type: Label
+            label: Save
+            children:
+              - type: LayoutBox
+                margin: large
+                stretchFactor: 1
+                children:
+                  - type: Output
+                    name: newvar
