--- a/jamovi/ca.a.yaml
+++ b/jamovi/ca.a.yaml
@@ -1,7 +1,6 @@
 ---
 name: CA
 title: Correspondence Analysis
-
 menuGroup: MEDA
 
 menuSubgroup: Multivariate Analysis
@@ -114,3 +113,7 @@ options:
     title: Cosine
     type: Bool
     default: false
+
+  - name: newvar
+    title: Coordinates
+    type: Output
