--- a/jamovi/mca.a.yaml
+++ b/jamovi/mca.a.yaml
@@ -50,7 +50,7 @@ options:
   - name: nFactors
     title: Number of factors
     type: Integer
-    default: 5
+    default: 2
 
   - name: abs
     title: X-axis
@@ -121,3 +121,7 @@ options:
     title: Selection of catagories
     type: String
     default: cos2 10
+
+  - name: newvar
+    title: Coordinates
+    type: Output
