--- a/jamovi/pca.r.yaml
+++ b/jamovi/pca.r.yaml
@@ -98,3 +98,15 @@ items:
         clearWith:
           - nFactors
         columns: []
+  - name: newvar
+    type: Output
+    title: Coordinates
+    measureType: continuous
+    initInRun: true
+    clearWith:
+      - actvars
+      - quantisup
+      - qualisup
+      - individus
+      - nFactors
+      - norme
