--- a/jamovi/pca.u.yaml
+++ b/jamovi/pca.u.yaml
@@ -38,6 +38,16 @@ children:
     stretchFactor: 1
     children:
       - type: Label
+        label: Instructions
+        stretchFactor: 1
+        children:
+          - type: CheckBox
+            name: tuto                        
+  - type: LayoutBox
+    margin: large
+    stretchFactor: 1
+    children:
+      - type: Label
         label: Standardization of the Variables
         stretchFactor: 1
         children:
@@ -79,7 +89,7 @@ children:
             label: Individual Graphic Options
             children:
               - type: CheckBox
-                name: modact
+                name: indact
               - type: CheckBox
                 name: modillus
               - type: TextBox
@@ -102,7 +112,7 @@ children:
         collapsed: true
         children:
           - type: Label
-            label: Automatic Description of the Axes
+            label: Automatic Description of the Dimensions
             children:
               - type: Label
                 label: ''
@@ -153,9 +163,63 @@ children:
           - type: Label
             label: Save
             children:
+              - type: Label
+                label: ''
+                cell:
+                  column: 0
+                  row: 0
+                stretchFactor: 1
+                children:
+                  - type: TextBox
+                    name: ncp
+                    format: number
+              - type: Label
+                label: ''
+                cell:
+                  column: 1
+                  row: 0
+                stretchFactor: 1
+                children:
+                  - type: Output
+                    name: newvar
+  - type: LayoutBox
+    margin: large
+    stretchFactor: 1
+    children:
+      - type: CollapseBox
+        label: Clustering
+        stretchFactor: 1
+        collapsed: true
+        children:
+          - type: Label
+            label: Clustering Graphic Options
+            children:
+              - type: Label
+                label: ''
+                cell:
+                  column: 0
+                  row: 0
+                stretchFactor: 1
+                children:
+                  - type: CheckBox
+                    name: graphclassif
+                    format: number
+              - type: Label
+                label: ''
+                cell:
+                  column: 1
+                  row: 0
+                stretchFactor: 1
+                children:
+                  - type: TextBox
+                    name: nbclust
+                    format: number
+          - type: Label
+            label: Save
+            children:
               - type: LayoutBox
                 margin: large
                 stretchFactor: 1
                 children:
                   - type: Output
-                    name: newvar
+                    name: newvar2       
