--- a/jamovi/textual.u.yaml
+++ b/jamovi/textual.u.yaml
@@ -25,6 +25,11 @@ children:
   - type: LayoutBox
     margin: large
     children:
+      - type: CheckBox
+        name: tuto
+  - type: LayoutBox
+    margin: large
+    children:
       - type: TextBox
         name: thres
         format: number
