--- a/jamovi/ca.u.yaml
+++ b/jamovi/ca.u.yaml
@@ -31,6 +31,16 @@ children:
     margin: large
     stretchFactor: 1
     children:
+      - type: Label
+        label: Instructions
+        stretchFactor: 1
+        children:
+          - type: CheckBox
+            name: tuto                                    
+  - type: LayoutBox
+    margin: large
+    stretchFactor: 1
+    children:
       - type: CollapseBox
         label: Graphic Options
         collapsed: true
@@ -118,7 +128,7 @@ children:
         stretchFactor: 1
         children:
           - type: Label
-            label: Automatic Description of the Axes
+            label: Automatic Description of the Dimensions
             children:
               - type: Label
                 label: ''
@@ -169,9 +179,63 @@ children:
           - type: Label
             label: Save
             children:
+              - type: Label
+                label: ''
+                cell:
+                  column: 0
+                  row: 0
+                stretchFactor: 1
+                children:
+                  - type: TextBox
+                    name: ncp
+                    format: number
+              - type: Label
+                label: ''
+                cell:
+                  column: 1
+                  row: 0
+                stretchFactor: 1
+                children:
+                  - type: Output
+                    name: newvar
+  - type: LayoutBox
+    margin: large
+    stretchFactor: 1
+    children:
+      - type: CollapseBox
+        label: Clustering
+        stretchFactor: 1
+        collapsed: true
+        children:
+          - type: Label
+            label: Clustering Graphic Options
+            children:
+              - type: Label
+                label: ''
+                cell:
+                  column: 0
+                  row: 0
+                stretchFactor: 1
+                children:
+                  - type: CheckBox
+                    name: graphclassif
+                    format: number
+              - type: Label
+                label: ''
+                cell:
+                  column: 1
+                  row: 0
+                stretchFactor: 1
+                children:
+                  - type: TextBox
+                    name: nbclust
+                    format: number
+          - type: Label
+            label: Save
+            children:
               - type: LayoutBox
                 margin: large
                 stretchFactor: 1
                 children:
                   - type: Output
-                    name: newvar
+                    name: newvar2                    
