--- a/jamovi/descfreq.a.yaml
+++ b/jamovi/descfreq.a.yaml
@@ -28,6 +28,11 @@ options:
     permitted:
       - numeric
 
+  - name: tuto
+    title: Read me before running
+    type: Bool
+    default: true
+
   - name: threshold
     title: Significance threshold (%)
     type: Number
