--- a/jamovi/mca.a.yaml
+++ b/jamovi/mca.a.yaml
@@ -47,8 +47,13 @@ options:
     permitted:
       - factor
 
+  - name: tuto
+    title: Read me before running
+    type: Bool
+    default: true      
+
   - name: nFactors
-    title: Number of factors
+    title: Number of dimensions
     type: Integer
     default: 2
 
@@ -122,6 +127,25 @@ options:
     type: String
     default: cos2 10
 
+  - name: ncp
+    title: Number of components
+    type: Integer
+    default: 5
+
+  - name: graphclassif
+    title: Representation of the clusters
+    type: Bool
+    default: false    
+
   - name: newvar
     title: Coordinates
+    type: Output
+
+  - name: nbclust
+    title: Number of clusters
+    type: Integer
+    default: -1
+
+  - name: newvar2
+    title: Cluster variable
     type: Output
