--- a/jamovi/mfa.r.yaml
+++ b/jamovi/mfa.r.yaml
@@ -2,8 +2,17 @@
 name: MFA
 title: Results of the Multiple Factor Analysis
 jrs: '1.1'
+refs: 
+    - factominer
+    - mfa
+    - explo
 
 items:
+  - name: instructions
+    title: Instructions
+    visible: (tuto)
+    type: Html
+
   - name: plotgroup
     title: Representation of the Groups
     type: Image
@@ -19,18 +28,26 @@ items:
     renderFun: .plotaxes
 
   - name: plotind
-    title: Representation of the Individuals (and the Categories)
+    title: Representation of the Individuals
     type: Image
     width: 800
     height: 600
     renderFun: .plotindividus
 
+  - name: plotcat
+    title: Representation of the Categories
+    type: Image
+    visible: false
+    width: 800
+    height: 600
+    renderFun: .plotcategory
+
   - name: plotvar
-    visible: (contivar)
     title: Representation of the Variables
     type: Image
-    width: 600
-    height: 600
+    visible: false
+    width: 700
+    height: 700
     renderFun: .plotvariables
 
   - name: eigengroup
@@ -55,8 +72,16 @@ items:
             type: number  
 
   - name: descdesdim
-    title: Automatic Description of the Axes
+    title: Automatic Description of the Dimensions
     type: Preformatted
+
+  - name: plotclassif
+    title: Representation of the Individuals According to Clusters
+    visible: (graphclassif)
+    type: Image
+    width: 800
+    height: 600
+    renderFun: .plotclassif
 
   - name: newvar
     type: Output
@@ -68,5 +93,16 @@ items:
       - quantisup
       - qualisup
       - individus
-      - nFactors
+      - norme
+
+  - name: newvar2
+    type: Output
+    title: Coordinates
+    measureType: continuous
+    initInRun: true
+    clearWith:
+      - actvars
+      - quantisup
+      - qualisup
+      - individus
       - norme
